[gd_scene load_steps=14 format=3 uid="uid://drgmbmwnkbrie"]

[ext_resource type="Script" uid="uid://gq7aml27ux5u" path="res://scripts/world/campus_quad.gd" id="1_x8qda"]
[ext_resource type="PackedScene" uid="uid://by56nppcy6bhp" path="res://scenes/npc.tscn" id="12_ixuhs"]
[ext_resource type="PackedScene" uid="uid://7syu50gcc3vi" path="res://scenes/pickups/pickup_item.tscn" id="28_jjvpw"]
[ext_resource type="PackedScene" uid="uid://bvb20kbggr188" path="res://scenes/player.tscn" id="29_77yo5"]
[ext_resource type="PackedScene" uid="uid://bx2qv4ojlhjbp" path="res://scenes/transitions/campus_to_cemetery.tscn" id="30_sbi4h"]
[ext_resource type="PackedScene" uid="uid://c3mgw6wgkpsos" path="res://scenes/transitions/campus_to_forest.tscn" id="31_e2kxr"]
[ext_resource type="Script" uid="uid://cvlk3govikcf7" path="res://scripts/combat/combat_initializer.gd" id="32_bu7ln"]
[ext_resource type="Script" uid="uid://u6pjvq7fn1fg" path="res://scripts/combat/construct_spawner.gd" id="33_h4aqm"]
[ext_resource type="Script" uid="uid://bkjrc6uvayktp" path="res://scripts/world/interaction_agent.gd" id="34_d7uiu"]
[ext_resource type="PackedScene" uid="uid://cwnw4x1ocl0ro" path="res://scenes/world/movement_marker.tscn" id="35_cs3ct"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_t30kj"]
vertices = PackedVector2Array(2231.01, 1141.07, 2822.64, 1125.27, 2872.43, 1140.6, 1639.78, 1871.64, 2138.2, 1212.69, 2197.1, 1158.7, 2907, 1126.77, 2907, 1113.23, 3060.01, 24.9375, 3065.98, 3040.1, 1606.71, 1902.27, 2872.93, 1099.6, 2823.38, 1109.76, 2399.07, 1075.92, 2366.49, 1056.67, 2146.31, 1131.44, 2147.82, 1144.8, 2100.94, 1186.44, 2065.03, 1198.87, 775.047, 1185.7, 774.953, 1170.18, 1185.21, 828.508, 1218.85, 834.109, 2103.2, 1226.69, 1633.99, 1838.35, 1457.04, 472.148, 1402.39, 695.438, 1370.2, 708.609, 1192.56, 663.969, 1195.13, 649.539, 1455.1, 456.273, 2137.79, 1198.72, 1523.05, 453.039, 1766.02, 339.391, 1522.95, 467.094, 1437.97, 720.641, 1438.03, 705.422, 1497.22, 476.172, 2064.97, 1213.03, 1564.13, 1802.87, 1250.49, 829.797, 1251.47, 813.398, 1406.55, 729.219, 1371.93, 723.68, 2396.62, 1089.6, 2230.99, 1128.9, 2365.91, 1095.18, 1505.15, 1806.14, 1434.29, 1845.51, 746.5, 1193.21, 2331.98, 1088.39, -10.9219, 3073.88, 1524.48, 1918.29, 1439.83, 1892.67, 2330.18, 1074.1, 2189.87, 1107.68, 1767.82, 325.109, 1731.85, 346.227, 1696.9, 338.156, 1218.21, 804.719, 1184.8, 811.977, 1160.17, 668.188, 1131.21, 659.5, 1695.24, 324.203, 1494.05, 442.359, 1163.73, 633.094, 10.9219, 8.04688, 711.359, 1187.59, 710.656, 1171.28, 745, 1162.69, 1130.8, 645.07, 1729.92, 306.859)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(3, 2, 6, 9, 10), PackedInt32Array(11, 12, 13, 14), PackedInt32Array(15, 16, 17, 18, 19, 20, 21, 22), PackedInt32Array(23, 4, 3, 24), PackedInt32Array(25, 26, 27, 28, 29, 30), PackedInt32Array(5, 4, 31, 16), PackedInt32Array(32, 33, 8, 7, 11, 34), PackedInt32Array(34, 11, 35, 36, 37), PackedInt32Array(19, 38, 23, 24, 39), PackedInt32Array(40, 41, 42, 35, 11, 14), PackedInt32Array(43, 42, 41), PackedInt32Array(25, 37, 36, 26), PackedInt32Array(16, 31, 17), PackedInt32Array(44, 1, 0, 45, 46), PackedInt32Array(19, 18, 38), PackedInt32Array(19, 39, 47), PackedInt32Array(19, 47, 48, 49), PackedInt32Array(13, 12, 1, 44), PackedInt32Array(50, 46, 45), PackedInt32Array(10, 9, 51, 52), PackedInt32Array(53, 52, 51), PackedInt32Array(54, 50, 45, 55), PackedInt32Array(33, 56, 8), PackedInt32Array(57, 33, 32), PackedInt32Array(58, 57, 32), PackedInt32Array(28, 27, 43, 41, 59), PackedInt32Array(28, 59, 60, 61), PackedInt32Array(20, 62, 61, 60, 21), PackedInt32Array(63, 58, 32, 64), PackedInt32Array(30, 29, 65, 66), PackedInt32Array(49, 48, 53, 51, 67), PackedInt32Array(67, 51, 66, 68), PackedInt32Array(69, 68, 66), PackedInt32Array(20, 69, 66, 70, 62), PackedInt32Array(8, 56, 71), PackedInt32Array(66, 8, 71), PackedInt32Array(66, 71, 63), PackedInt32Array(66, 63, 64, 30), PackedInt32Array(66, 65, 70), PackedInt32Array(15, 22, 40, 55), PackedInt32Array(54, 55, 40, 14)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1, -2, 3070, 15, 3076, 3050, -21, 3084), PackedVector2Array(110, 499, 1093, 494, 1111, 774, 744, 788, 468, 797, 119, 779), PackedVector2Array(2388, 1081, 2366, 1068, 2341, 1080, 2366, 1085), PackedVector2Array(2221, 1135, 2190, 1119, 2157, 1137, 2196, 1148), PackedVector2Array(2128, 1206, 2101, 1197, 2075, 1206, 2103, 1216), PackedVector2Array(2897, 1120, 2872, 1110, 2833, 1118, 2872, 1130), PackedVector2Array(1757, 331, 1730, 318, 1706, 330, 1732, 336), PackedVector2Array(1513, 460, 1494, 453, 1466, 463, 1496, 466), PackedVector2Array(1428, 713, 1403, 706, 1381, 715, 1406, 719), PackedVector2Array(1241, 821, 1218, 815, 1195, 820, 1219, 824), PackedVector2Array(1184, 655, 1163, 644, 1141, 652, 1161, 658), PackedVector2Array(765, 1178, 745, 1173, 721, 1179, 746, 1183), PackedVector2Array(1021, 937, 839, 936, 840, 924, 1017, 925), PackedVector2Array(2906, 761, 1917, 764, 1917, 491, 2899, 497), PackedVector2Array(2965, 1917, 2610, 1934, 2489, 1930, 1975, 1926, 1971, 1637, 2953, 1629), PackedVector2Array(1048, 1913, 518, 1934, 409, 1934, 71, 1926, 62, 1625, 1044, 1633), PackedVector2Array(1055, 2715, 1060, 2998, 720, 3011, 593, 3006, 69, 3006, 67, 2710), PackedVector2Array(2970, 2997, 2504, 3004, 2373, 3006, 1982, 3004, 1978, 2718, 2972, 2720), PackedVector2Array(1625, 1845, 1562, 1813, 1508, 1816, 1445, 1851, 1449, 1885, 1525, 1908, 1602, 1893, 1629, 1868)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48pq8"]
size = Vector2(389.5, 239)

[sub_resource type="CircleShape2D" id="CircleShape2D_bm7ek"]

[node name="CampusQuad" type="Node2D"]
script = ExtResource("1_x8qda")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_t30kj")

[node name="z_Objects" type="Node2D" parent="."]

[node name="Erik" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(1424, 852)
scale = Vector2(2.51613, 2.52745)
character_id = "erik"
character_name = "Erik"
dialogue_file = "res://data/dialogues/erik.dialogue"
initial_dialogue_title = "fire_alarm"

[node name="Kitty" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(1908, 1085)
scale = Vector2(2.537, 2.537)
character_id = "kitty"
character_name = "Kitty"

[node name="Poison" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(1381, 1290)
scale = Vector2(2.537, 2.537)
character_id = "poison"
character_name = "Poison"

[node name="Dusty" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(1172, 1382)
scale = Vector2(2.537, 2.537)
character_id = "dusty"
character_name = "Dusty"

[node name="Li" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(1773, 1468)
scale = Vector2(2.537, 2.537)
character_id = "li"
character_name = "Li"

[node name="ProfessorMoss" parent="z_Objects" instance=ExtResource("12_ixuhs")]
position = Vector2(926, 956)
scale = Vector2(2.537, 2.537)
character_id = "professor_moss"
character_name = "Professor Moss"

[node name="nonwalkable areas" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="Col_Dormitory13" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(629, 651)
polygon = PackedVector2Array(493, 120, 104, 119, 103, 130, -26, 130, -26, 119, -497, 119, -496, -164, 489, -162)

[node name="Col_MIllennial Hall" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(2411, 651)
polygon = PackedVector2Array(493, 120, 47, 119, 45, 130, -87, 130, -75, 119, -497, 119, -496, -164, 489, -162)

[node name="Col_Freyja Commons" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(564, 1802)
polygon = PackedVector2Array(493, 120, -40, 115, -41, 121, -168, 121, -169, 113, -499, 116, -496, -164, 489, -162)

[node name="Col_Resarch_Lab" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(2478, 1797)
polygon = PackedVector2Array(493, 120, 158, 119, 159, 126, 30, 126, 30, 118, -497, 119, -496, -164, 489, -162)

[node name="Col_Hollow_Hall" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(564, 2880.3)
polygon = PackedVector2Array(493, 120, 159, 121.7, 160, 125.7, 32, 124.7, 30, 120.7, -501, 120.7, -496, -164, 489, -162)

[node name="Col_Hmelock_Library" type="CollisionPolygon2D" parent="nonwalkable areas"]
position = Vector2(2476, 2882)
polygon = PackedVector2Array(493, 120, 28, 119, 27, 124, -100, 124, -100, 118, -497, 119, -496, -164, 489, -162)

[node name="Edges" type="CollisionPolygon2D" parent="nonwalkable areas"]
polygon = PackedVector2Array(8, -35, 3111, -55, 3111, 3105, -38, 3085, -47, -44, 7, -44, 1, 3051, 3056, 3049, 3065, 97, 151.166, 83.6513, 9, 83)

[node name="visitable_areas" type="Node2D" parent="."]

[node name="FountainArea" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
position = Vector2(1454, 1809)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/FountainArea"]
position = Vector2(105, 47)
shape = SubResource("RectangleShape2D_48pq8")

[node name="MillenialHall" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
position = Vector2(2133, 860)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/MillenialHall"]
position = Vector2(256, -170)
shape = SubResource("RectangleShape2D_48pq8")

[node name="LibraryEntranceArea" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
position = Vector2(427, 857)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/LibraryEntranceArea"]
position = Vector2(245, -173)
shape = SubResource("RectangleShape2D_48pq8")

[node name="HemlockLibraryArea" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
position = Vector2(2203, 3041)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/HemlockLibraryArea"]
position = Vector2(236, -164)
shape = SubResource("RectangleShape2D_48pq8")

[node name="Freyja Commons" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
visible = false
position = Vector2(245, 2044)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/Freyja Commons"]
position = Vector2(243, -190)
shape = SubResource("RectangleShape2D_48pq8")

[node name="Hollow Hall" type="Area2D" parent="visitable_areas" groups=["visitable_area"]]
position = Vector2(397, 3063)

[node name="CollisionShape2D" type="CollisionShape2D" parent="visitable_areas/Hollow Hall"]
position = Vector2(243, -190)
shape = SubResource("RectangleShape2D_48pq8")

[node name="BuildingLabels" type="Node2D" parent="."]
position = Vector2(388, 1711)

[node name="CommonLichen1" parent="." instance=ExtResource("28_jjvpw")]
position = Vector2(610, 1998)
item_id = "common_lichen1"
item_amount = null
auto_pickup = null
pickup_range = null
pickup_instance_id = null
fallback_name = null
fallback_description = null
fallback_category = null
fallback_tags = null

[node name="CommonLichen2" parent="." instance=ExtResource("28_jjvpw")]
position = Vector2(1976, 1874)
item_id = "common_lichen2"
item_amount = null
auto_pickup = null
pickup_range = null
pickup_instance_id = null
fallback_name = null
fallback_description = null
fallback_category = null
fallback_tags = null

[node name="CommonLichen3" parent="." instance=ExtResource("28_jjvpw")]
position = Vector2(2442, 1029)
item_id = "common_lichen3"
item_amount = null
auto_pickup = null
pickup_range = null
pickup_instance_id = null
fallback_name = null
fallback_description = null
fallback_category = null
fallback_tags = null

[node name="RareLichen1" parent="." instance=ExtResource("28_jjvpw")]
position = Vector2(2129, 1160)
item_id = "rare_lichen1"
item_amount = null
auto_pickup = null
pickup_range = null
pickup_instance_id = null
fallback_name = null
fallback_description = null
fallback_category = null
fallback_tags = null

[node name="RareLichen2" parent="." instance=ExtResource("28_jjvpw")]
position = Vector2(1064, 1803)
item_id = "rare_lichen2"
item_amount = null
auto_pickup = null
pickup_range = null
pickup_instance_id = null
fallback_name = null
fallback_description = null
fallback_category = null
fallback_tags = null

[node name="Player" parent="." instance=ExtResource("29_77yo5")]
position = Vector2(1169, 1112)
scale = Vector2(2.53736, 2.53736)

[node name="DormEntrance" parent="." instance=ExtResource("30_sbi4h")]
position = Vector2(2394, 774)
scale = Vector2(1.66489, 1.66489)
target_location = "dorm_room"
target_scene = "uid://cexat8mt4n8pk"
transition_name = "DoormRoom"

[node name="CampusQuadSpawn" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(1168, 1113)

[node name="CemeteryExitSpawn" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(3015, 113)

[node name="DormExitSpawn" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(2387, 787)

[node name="CemeteryEntrance" parent="." instance=ExtResource("30_sbi4h")]
position = Vector2(3025, 134)

[node name="LabEntrance" parent="." instance=ExtResource("30_sbi4h")]
position = Vector2(2568, 1914)
scale = Vector2(1.66489, 1.66489)
target_location = "research_lab"
transition_name = "Research Lab"

[node name="lab_exit" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(2578, 1925)
scale = Vector2(0.85348, 0.85348)

[node name="LibraryEntrance" parent="." instance=ExtResource("30_sbi4h")]
position = Vector2(2439, 2951)
scale = Vector2(1.66489, 1.66489)
target_location = "library"
transition_name = "Library"

[node name="library_exit" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(2436.53, 2999)
scale = Vector2(0.85348, 0.85348)

[node name="forest_exit" type="Marker2D" parent="." groups=["spawn_point"]]
position = Vector2(42, 3032)
scale = Vector2(0.85348, 0.85348)

[node name="ForestEntrance2" parent="." instance=ExtResource("31_e2kxr")]
position = Vector2(43, 3008)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="GameInfo" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_bottom = 0.00462963
offset_left = 20.0
offset_top = 20.0
offset_right = 350.0
offset_bottom = 90.0
text = "Love & Lichens - Demo
Use WASD or arrow keys to move
Press E or Space to interact with NPCs"
metadata/_edit_use_anchors_ = true

[node name="CombatInitializer" type="Node" parent="."]
script = ExtResource("32_bu7ln")

[node name="ConstructSpawner" type="Node2D" parent="."]
position = Vector2(1730, 806)
script = ExtResource("33_h4aqm")
spawn_positions = [Vector2(1730, 800), Vector2(1730, 1000)]

[node name="TestCutsceneArea" type="Area2D" parent="."]
position = Vector2(1337, 955)
script = ExtResource("34_d7uiu")
interaction_id = "Cutscene Test"
dialog_id = "cutscene_test"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestCutsceneArea"]
shape = SubResource("CircleShape2D_bm7ek")

[node name="center_marker" parent="." instance=ExtResource("35_cs3ct")]
position = Vector2(1621, 886)

[node name="right_marker" parent="." instance=ExtResource("35_cs3ct")]
position = Vector2(1981, 1193)
